--- a/frontend/index.css
+++ b/frontend/index.css
@@ -31,9 +31,13 @@ body {
   margin-left: 20px;
 }
 
+.finishEditingButton {
+  margin-left: 20px;
+}
 
-
-
+.homePageButtons {
+  display: block;
+}
 
 
 /* 
